Load the attendance form in the same page and without caching
Load the attendance form in the same page and without caching so that the Back button will take the teacher back to the course page.

Submit the attendance in the same page and without caching

Submit the attendance in the same page and without caching so that the Back button will take the teacher back to the course page afterwards.

--- a/templates/mobile_teacher_form_latest.mustache
+++ b/templates/mobile_teacher_form_latest.mustache
@@ -104,7 +104,7 @@
         </ion-radio-group>
         </span>
         <%/users%>
-        <ion-button class="ion-margin" expand="block" core-site-plugins-new-content component="mod_attendance" method="mobile_view_activity" [args]="{cmid: <% cmid %>, courseid: <% courseid %>, sessid: <% sessid %><% btnargs %>}">
+        <ion-button class="ion-margin" expand="block" core-site-plugins-new-content component="mod_attendance" method="mobile_view_activity" [args]="{cmid: <% cmid %>, courseid: <% courseid %>, sessid: <% sessid %><% btnargs %>}"  [preSets]="{getFromCache: 0, saveToCache: 0}" refreshOnSuccess="true" samePage="true">
             {{ 'plugin.mod_attendance.submitattendance' | translate }}
         </ion-button>
     <%/users.0%>
